apps/actions-runner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actions-runner
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
