apps/actions-runner/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: actions-runner-default-deny-ingress
  namespace: actions-runner
spec:
  podSelector: {}
  policyTypes:
    - Ingress
